# LABS

./: .gitignore
ComputationalMath/sem5/: notes.ipynb
ComputationalMath/sem5/labs/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
ComputationalMath/sem5/notes/: 01.md
ComputationalMath/sem6/: lab1.ipynb  lab2.ipynb  lab3.ipynb
DigitalProcessing/: Lab1_task.ipynb
DigitalProcessing/lab1/: Lab1_task.ipynb
DigitalProcessing/lab2/: Lab2_8.ipynb  Lab2_task.ipynb
DigitalProcessing/lab_oscilloscope/data/: lab1_data_f0.txt  lab1_data_f1.txt  lab1_data_f2.txt  lab1_data_f3.txt
PHYS_2SEM/213/: lab2.1.3.tex
PHYS_2SEM/223/: 4experement.tex  5calc.tex
PHYS_2SEM/231/: lab231.tex
PHYS_2SEM/231/matlab/: 231_PH2.csv  231_PL1.csv
PHYS_3SEM/121/: 0main.tex  3experement.tex
PHYS_3SEM/323/: 2theory.tex  3experement.tex
PHYS_3SEM/324/: 0main.tex  2theory.tex  3experement.tex
PHYS_3SEM/334/: 0main.tex  3experement.tex
PHYS_3SEM/342/: 2theory.tex
PHYS_3SEM/345/: 3experement.tex
PHYS_4SEM/423/: 2theory.tex
PHYS_4SEM/431/: 3experement.tex
PHYS_4SEM/432/: 0main.tex
PHYS_4SEM/433/: 2theory.tex
PHYS_4SEM/451/: 3experement.tex
PHYS_LAB_TEMPLATE/: 2theory.tex
ParallelPrograming/intro_00_hello_world/: main.c  makefile
ParallelPrograming/openmp/T00_hello_world/: CMakeLists.txt  hello_world.cpp
ParallelPrograming/openmp/T01_harm_series/: CMakeLists.txt  harm.cpp
ParallelPrograming/openmp/T02_cycle_access/: CMakeLists.txt  cycle_access.cpp
ParallelPrograming/openmp/T04_cycle/: CMakeLists.txt
ParallelPrograming/openmp/T04_cycle/00/: CMakeLists.txt
ParallelPrograming/openmp/T04_cycle/00/src/: parallel.cpp  reference.cpp
ParallelPrograming/openmp/T04_cycle/02/: CMakeLists.txt
ParallelPrograming/openmp/T04_cycle/02/src/: common.hpp  parallel.cpp  reference.cpp
ParallelPrograming/openmpi/T01_harm_series/: main.c  makefile
ParallelPrograming/openmpi/T02_cycle_send/: main.c  makefile
ParallelPrograming/openmpi/T03_diff_solve/: CMakeLists.txt  visualization.ipynb
ParallelPrograming/openmpi/T03_diff_solve/include/: MPI_trans_eq.hpp  diff_solve.hpp
ParallelPrograming/openmpi/T03_diff_solve/src/: main.cpp  msg_test.cpp
ParallelPrograming/openmpi/T04_cycle/: CMakeLists.txt  speedup.ipynb
ParallelPrograming/openmpi/T04_cycle/00/: CMakeLists.txt
ParallelPrograming/openmpi/T04_cycle/00/src/: common.hpp  parallel.cpp  reference.cpp
ParallelPrograming/openmpi/T04_cycle/01/: CMakeLists.txt
ParallelPrograming/openmpi/T04_cycle/01/src/: common.hpp  parallel.cpp  reference.cpp
ParallelPrograming/openmpi/T04_cycle/03/: CMakeLists.txt
ParallelPrograming/openmpi/T04_cycle/03/src/: common.hpp  parallel.cpp  reference.cpp
ParallelPrograming/openmpi/T04_cycle/src/: common.hpp  parallel.cpp
ParallelPrograming/task_00_diff_solve/: CMakeLists.txt  visualization.ipynb
ParallelPrograming/task_00_diff_solve/include/: MPI_trans_eq.hpp  diff_solve.hpp
ParallelPrograming/task_00_diff_solve/src/: main.cpp
ParallelPrograming/threads/T00_hello_world/: main.cpp  makefile
ParallelPrograming/threads/T01_harm_series/: input  main.cpp  makefile
ParallelPrograming/threads/T02_cycle_send/: main.cpp  makefile
ParallelPrograming/threads/T03_integrate/: CMakeLists.txt
ParallelPrograming/threads/T03_integrate/include/: integrate.hpp
ParallelPrograming/threads/T03_integrate/src/: main.cpp
PhysLab/Template/: 2theory.tex
PhysLab/sem2/223/: 1main.tex  5calc.tex
PhysLab/sem2/231/matlab/: 231_TL2.csv  plotting.mlx
PhysLab/sem2/251/: 4experiment.tex
PhysLab/sem3/121/: 2theory.tex
PhysLab/sem3/323/: 2theory.tex  3experement.tex
PhysLab/sem3/324/: 2theory.tex  3experement.tex
PhysLab/sem3/342/: 3experement.tex
PhysLab/sem3/345/: 2theory.tex
PhysLab/sem4/423/: 3experement.tex
PhysLab/sem4/431/: 1title.tex  3experement.tex
PhysLab/sem4/451/: 0main.tex
PhysLab/sem4/472/: 2theory.tex
PhysLab/sem4/473/: 0main.tex  2theory.tex  3experement.tex
PhysLab/sem5/513/: 0main.tex
Physics/Template/: 0main.tex
Physics/choosen_question/: 0main.tex  1title.tex  2WoodsFilter.tex  3LyotsFilter.tex
Physics/sem2/223/: 2_0title.tex  3formulas.tex  4experement.tex
Physics/sem2/231/: plotting.mlx
Physics/sem2/231/matlab/: 231_PH1.csv  231_PL2.csv  231_PL3.csv  231_TH1.csv  231_TH2.csv  231_TL1.csv  231_TL3.csv
Physics/sem2/241/: lab241.tex
Physics/sem2/251/: 1main.tex  2_0title.tex  3formulas.tex
Physics/sem3/323/: 0main.tex
Physics/sem3/334/: 2theory.tex  3experement.tex
Physics/sem3/342/: 0main.tex
Physics/sem3/345/: 0main.tex
Physics/sem4/423/: 0main.tex
Physics/sem4/431/: 0main.tex  2theory.tex
Physics/sem4/432/: 2theory.tex  3experement.tex
Physics/sem4/433/: 0main.tex  3experement.tex
Physics/sem4/451/: 2theory.tex  3experement.tex
Physics/sem4/472/: 0main.tex  3experement.tex
Physics/sem5/512/: 0main.tex  2theory.tex  3experement.tex  Calculations.ipynb
Physics/sem5/513/: 1title.tex  2theory.tex  3experement.tex
Physics/sem5/521/: 0main.tex  2theory.tex  3experement.tex
Physics/sem5/522/: 0main.tex  2theory.tex  3experement.tex  Calculations.ipynb
Physics/sem5/541/: 0main.tex  2theory.tex  3experement.tex  Calculations.ipynb
Physics/sem5/542/: 0main.tex  2theory.tex  3experement.tex  Calculations.ipynb
Physics/sem5/551/: 0main.tex  2theory.tex  3experement.tex  Calculations.ipynb
Physics/sem5/555/: 0main.tex  2theory.tex
Physics/sem5/581/: 0main.tex  2theory.tex  3experement.tex  Calculations.ipynb
